--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,38 @@
 # Gradle files
 .gradle/
 build/
+.idea/
+*.iml
 
-# Local configuration file (sdk path, etc)
+# Android Studio specific files
 local.properties
 
-# Log/OS Files
-*.log
-
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
+# Generated files
 *.apk
-output.json
+*.ap_ 
+*.dex
+*.class
+*.log
+*.bin
+*.so
+*.db
 
-# IntelliJ
-*.iml
-.idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
+# OS-specific files
+.DS_Store
+Thumbs.db
 
-# Keystore files
+# Keystore files (IMPORTANT: Do not include private keystore files)
 *.jks
 *.keystore
 
-# Google Services (e.g. APIs or Firebase)
-google-services.json
+# User-specific files
+.gradle
+.idea
+.vscode
 
-# Android Profiling
-*.hprof
+# Android-specific
+captures/
+output/
+
+# Others
+*.swp
